# poseidon

./: .editorconfig  .gitignore  Cargo.toml  README.md  rebar.config
.github/workflows/: main.yml
rust_src/poseidon_nif/: .gitignore  Cargo.toml
rust_src/poseidon_nif/src/: atoms.rs  client.rs  lib.rs  nif.rs  task.rs
src/: poseidon.app.src  poseidon.erl  poseidon_nif.erl
